# RosterBot

./: .gitignore  README.md  pyproject.toml
Home/source/: main.py
Queries/: management.sql
cogs/: INSERT.py  UPDATE.py  teste.py
controllers/: QueriesController.py
lib/: QueriesController.py  queries_controller.py
src/: main.py
src/loader/: __init__.py
src/source/: main.py
